// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Code Snippet Props custom_lang_label 1`] = `
<div data-lang="css"
     data-mode="light"
     data-custom-lang-label="Foo"
     class="c-bolt-code-snippet"
>
  <pre>
    <code>
      .my-css {
      display: block;
    }
    </code>
  </pre>
</div>
`;

exports[`Bolt Code Snippet Props hide_copy 1`] = `
<div data-lang="css"
     data-mode="light"
     data-hide-copy
     class="c-bolt-code-snippet"
>
  <pre>
    <code>
      .my-css {
      display: block;
    }
    </code>
  </pre>
</div>
`;

exports[`Bolt Code Snippet Props hide_lang_label 1`] = `
<div data-lang="css"
     data-mode="light"
     data-hide-lang-label
     class="c-bolt-code-snippet"
>
  <pre>
    <code>
      .my-css {
      display: block;
    }
    </code>
  </pre>
</div>
`;

exports[`Bolt Code Snippet Props hide_lang_label and hide_copy 1`] = `
<div data-lang="css"
     data-mode="light"
     data-hide-copy
     data-hide-lang-label
     class="c-bolt-code-snippet"
>
  <pre>
    <code>
      .my-css {
      display: block;
    }
    </code>
  </pre>
</div>
`;

exports[`Bolt Code Snippet Props lang: atom 1`] = `"Atom"`;

exports[`Bolt Code Snippet Props lang: bash 1`] = `"Bash"`;

exports[`Bolt Code Snippet Props lang: clike 1`] = `"C-like"`;

exports[`Bolt Code Snippet Props lang: css 1`] = `"CSS"`;

exports[`Bolt Code Snippet Props lang: csv 1`] = `"CSV"`;

exports[`Bolt Code Snippet Props lang: docker 1`] = `"Docker"`;

exports[`Bolt Code Snippet Props lang: dockerfile 1`] = `"Docker"`;

exports[`Bolt Code Snippet Props lang: html 1`] = `"HTML"`;

exports[`Bolt Code Snippet Props lang: http 1`] = `"HTTP"`;

exports[`Bolt Code Snippet Props lang: java 1`] = `"Java"`;

exports[`Bolt Code Snippet Props lang: javascript 1`] = `"JavaScript"`;

exports[`Bolt Code Snippet Props lang: js 1`] = `"JavaScript"`;

exports[`Bolt Code Snippet Props lang: json 1`] = `"JSON"`;

exports[`Bolt Code Snippet Props lang: jsx 1`] = `"React JSX"`;

exports[`Bolt Code Snippet Props lang: markdown 1`] = `"Markdown"`;

exports[`Bolt Code Snippet Props lang: markup 1`] = `"Markup"`;

exports[`Bolt Code Snippet Props lang: mathml 1`] = `"MathML"`;

exports[`Bolt Code Snippet Props lang: md 1`] = `"Markdown"`;

exports[`Bolt Code Snippet Props lang: none 1`] = `undefined`;

exports[`Bolt Code Snippet Props lang: rest 1`] = `"reST (reStructuredText)"`;

exports[`Bolt Code Snippet Props lang: rss 1`] = `"RSS"`;

exports[`Bolt Code Snippet Props lang: scss 1`] = `"Sass (Scss)"`;

exports[`Bolt Code Snippet Props lang: shell 1`] = `"Bash"`;

exports[`Bolt Code Snippet Props lang: ssml 1`] = `"SSML"`;

exports[`Bolt Code Snippet Props lang: svg 1`] = `"SVG"`;

exports[`Bolt Code Snippet Props lang: tsx 1`] = `"React TSX"`;

exports[`Bolt Code Snippet Props lang: twig 1`] = `"Twig"`;

exports[`Bolt Code Snippet Props lang: xml 1`] = `"XML"`;

exports[`Bolt Code Snippet Props lang: yaml 1`] = `"YAML"`;

exports[`Bolt Code Snippet Props lang: yml 1`] = `"YAML"`;

exports[`Bolt Code Snippet Props mode: dark 1`] = `
<div data-lang="css"
     data-mode="dark"
     class="c-bolt-code-snippet"
>
  <pre>
    <code>
      .my-css {
      display: block;
    }
    </code>
  </pre>
</div>
`;

exports[`Bolt Code Snippet Props mode: light 1`] = `
<div data-lang="css"
     data-mode="light"
     class="c-bolt-code-snippet"
>
  <pre>
    <code>
      .my-css {
      display: block;
    }
    </code>
  </pre>
</div>
`;

exports[`Bolt Code Snippet Props mode: none 1`] = `
<div data-lang="css"
     class="c-bolt-code-snippet"
>
  <pre>
    <code>
      .my-css {
      display: block;
    }
    </code>
  </pre>
</div>
`;

exports[`Bolt Code Snippet default 1`] = `
<div data-lang="css"
     data-mode="light"
     class="c-bolt-code-snippet"
>
  <pre>
    <code>
      .my-css {
      display: block;
    }
    </code>
  </pre>
</div>
`;

exports[`Bolt Code Snippet default with JS code 1`] = `
<div data-lang="js"
     data-mode="light"
     class="c-bolt-code-snippet"
>
  <pre>
    <code>
      import { props } from &#039;@bolt/core-v3.x/utils&#039;;
    </code>
  </pre>
</div>
`;

exports[`Bolt Code Snippet default with Twig code 1`] = `
<div data-lang="twig"
     data-mode="light"
     class="c-bolt-code-snippet"
>
  <pre>
    <code>
      {% include &#039;@bolt-components-code-snippet/code-snippet.twig&#039; with {
      lang: &#039;html&#039;,
      content: &#039;&lt;p&gt;Hello world!&lt;/p&gt;&#039;
    } only %}
    </code>
  </pre>
</div>
`;
